--- a/index.html
+++ b/index.html
@@ -2,10 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>web</title>
-
-
-
+    <title>梅兰商城</title>
+    <link href="css/cssreset.css" rel="stylesheet" type="text/css">
 
 
 </head>
