by C 1、创建顶部头

--- a/index.html
+++ b/index.html
@@ -3,11 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <title>梅兰商城</title>
+    <script type="text/javascript" src="http://cdn.bootcss.com/angular.js/2.0.0-beta.17/angular2.min.js"></script>
     <link href="css/cssreset.css" rel="stylesheet" type="text/css">
-
-
+    <link href="css/style.css" rel="stylesheet" type="text/css">
+    <link href="css/common.css" rel="stylesheet" type="text/css">
+    <script type="text/javascript" src="js/controller.js"></script>
 </head>
-<body>
+<body >
+
+    <!--S＝页面的顶部-->
+    <div class="top">
+        <div class="top_page">
+            <div class="top_page_l fl">您好！欢迎来到建材网！</div>
+            <div class="top_page_r fr">
+
+            </div>
+        </div>
+    </div>
+<!--E＝页面的顶部-->
+
 
 </body>
 </html>
