by C 1、添加精灵图

--- a/index.html
+++ b/index.html
@@ -16,7 +16,14 @@
         <div class="top_page">
             <div class="top_page_l fl">您好！欢迎来到建材网！</div>
             <div class="top_page_r fr">
-
+                <ul>
+                    <li><a href="#">建材网首页</a></li>
+                    <li><a href="#"></a>我的商务室<s></s></li>
+                    <li><a href="#">我的收藏<s></s></a></li>
+                    <li><a href="#">建材服务<s></s></a></li>
+                    <li><a href="#">客服中心</a></li>
+                    <li><a href="#">网站导航<s></s></a></li>
+                </ul>
             </div>
         </div>
     </div>
