--- a/index.html
+++ b/index.html
@@ -27,7 +27,16 @@
             </div>
         </div>
     </div>
-<!--E＝页面的顶部-->
+    <!--E＝页面的顶部-->
+    <!--S＝logo-->
+    <div class="logo">
+        <h1 class="logo_l fl">梅兰商贸</h1>
+        <div class="logo_r fr">
+            <input type="input" class="logo_r_search fl">
+            <input type="button" class="logo_r_btn fl" value="搜索">
+        </div>
+    </div>
+    <!--E＝logo-->
 
 
 </body>
