by C 1、导航功能的制作

--- a/index.html
+++ b/index.html
@@ -32,11 +32,25 @@
     <div class="logo">
         <h1 class="logo_l fl">梅兰商贸</h1>
         <div class="logo_r fr">
-            <input type="input" class="logo_r_search fl">
-            <input type="button" class="logo_r_btn fl" value="搜索">
+            <div class="logo_r_content">
+                <input type="input" class="logo_r_search fl" value="请输入关键字">
+                <input type="button" class="logo_r_btn fl" value="搜索" >
+            </div>
+
         </div>
     </div>
     <!--E＝logo-->
+    <!--S＝导航-->
+    <div class="nav">
+        <ul>
+            <li><a href="#">首页</a></li>
+            <li><a href="#">建筑材料</a></li>
+            <li><a href="#">儿童安全座椅</a></li>
+            <li><a href="#">工艺美术品</a></li>
+        </ul>
+    </div>
+    <!--E＝导航-->
+
 
 
 </body>
