--- a/index.html
+++ b/index.html
@@ -50,6 +50,35 @@
         </ul>
     </div>
     <!--E＝导航-->
+    <!--S＝banner-->
+    <div class="banner">
+        <div class="subNav fl">
+            <h2>商机市场</h2>
+            <ul>
+                <li><s></s><a href="#">建筑材料</a></li>
+                <li><s></s><a href="#">安全座椅</a></li>
+                <li><s></s><a href="#">工艺美术品</a></li>
+                <li><s></s><a href="#">建筑材料</a></li>
+                <li><s></s><a href="#">安全座椅</a></li>
+                <li><s></s><a href="#">工艺美术品</a></li>
+            </ul>
+        </div>
+        <div class="ad fl"></div>
+        <div class="message fr">
+            <div class="message_top">
+                <p class="fw">建材通大宗版</p>
+                <s class="fl"></s>
+                <p class="fl cheap">价格实惠，量身为预算不<br>多的供应商所设。<a href="#">了解详情</a></p>
+            </div>
+            <div class="message_bottom">
+                <p class="findeMessage">找信息或者发信息遇到问题？</p>
+                <p class="tel"><s></s>13122076595</p>
+                <input type="button" class="btn" value="643496623">
+
+            </div>
+        </div>
+    </div>
+    <!--E＝banner-->
 
 
 
