by C 1、商品初步修改

--- a/index.html
+++ b/index.html
@@ -80,6 +80,31 @@
     </div>
     <!--E＝banner-->
 
+    <!--S－建筑材料-->
+        <div class="material">
+            建筑材料
+        </div>
+    <!--E－建筑材料-->
+    <!--S＝具体信息-->
+    <div class="product">
+        <div class="product_l fl">
+            <div class="product_l_top">
+                <div class="product_l_top_product1 fl">
+                    <div class="buy fl">
+                        <div class="img"><s></s></div>
+                        <input type="button" value="立即购买" class="btn">
+                    </div>
+                    <div class="explain fl"></div>
+                </div>
+                <div class="product_l_top_product2 fl"></div>
+            </div>
+            <div class="product_l_line"></div>
+            <div class="product_l_bottom"></div>
+        </div>
+        <div class="product_r fr"></div>
+    </div>
+    <!--E＝具体信息-->
+
 
 
 </body>
