--- a/index.html
+++ b/index.html
@@ -94,12 +94,53 @@
                         <div class="img"><s></s></div>
                         <input type="button" value="立即购买" class="btn">
                     </div>
-                    <div class="explain fl"></div>
+                    <div class="explain fl">
+                        <p class="goodWife">好太太晾衣架&nbsp;铝钛合金&nbsp;升降双杠</p>
+                        <p class="auto">自动换挡&nbsp;安全耐用<br>稳定性好&nbsp;抗氧化强</p>
+                        <p class="money"><span>239.00</span> <s>￥386.00</s></p>
+                        <p class="buyed">限量99件，已售22件</p>
+                    </div>
                 </div>
-                <div class="product_l_top_product2 fl"></div>
+                <div class="product_l_top_product2 fl">
+                    <div class="buy fl">
+                        <div class="img"><s></s></div>
+                        <input type="button" value="立即购买" class="btn">
+                    </div>
+                    <div class="explain fl">
+                        <p class="goodWife">好太太晾衣架&nbsp;铝钛合金&nbsp;升降双杠</p>
+                        <p class="auto">自动换挡&nbsp;安全耐用<br>稳定性好&nbsp;抗氧化强</p>
+                        <p class="money"><span>239.00</span> <s>￥386.00</s></p>
+                        <p class="buyed">限量99件，已售22件</p>
+                    </div>
+                </div>
             </div>
             <div class="product_l_line"></div>
-            <div class="product_l_bottom"></div>
+            <div class="product_l_bottom">
+                <div class="product_l_top_product1 fl">
+                    <div class="buy fl">
+                        <div class="img"><s></s></div>
+                        <input type="button" value="立即购买" class="btn">
+                    </div>
+                    <div class="explain fl">
+                        <p class="goodWife">好太太晾衣架&nbsp;铝钛合金&nbsp;升降双杠</p>
+                        <p class="auto">自动换挡&nbsp;安全耐用<br>稳定性好&nbsp;抗氧化强</p>
+                        <p class="money"><span>239.00</span> <s>￥386.00</s></p>
+                        <p class="buyed">限量99件，已售22件</p>
+                    </div>
+                </div>
+                <div class="product_l_top_product2 fl">
+                    <div class="buy fl">
+                        <div class="img"><s></s></div>
+                        <input type="button" value="立即购买" class="btn">
+                    </div>
+                    <div class="explain fl">
+                        <p class="goodWife">好太太晾衣架&nbsp;铝钛合金&nbsp;升降双杠</p>
+                        <p class="auto">自动换挡&nbsp;安全耐用<br>稳定性好&nbsp;抗氧化强</p>
+                        <p class="money"><span>239.00</span> <s>￥386.00</s></p>
+                        <p class="buyed">限量99件，已售22件</p>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="product_r fr"></div>
     </div>
