--- a/index.html
+++ b/index.html
@@ -142,9 +142,33 @@
                 </div>
             </div>
         </div>
-        <div class="product_r fr"></div>
+        <div class="product_r fr">
+            <h2 >建材资讯</h2>
+            <ul>
+                <li><a href="#">贵阳钢材市场7月17日价格行情</a></li>
+                <li><a href="#">贵阳钢材市场7月17日价格行情</a></li>
+                <li><a href="#">贵阳钢材市场7月17日价格行情</a></li>
+                <li><a href="#">贵阳钢材市场7月17日价格行情</a></li>
+                <li><a href="#">贵阳钢材市场7月17日价格行情</a></li>
+                <li><a href="#">贵阳钢材市场7月17日价格行情</a></li>
+                <li><a href="#">贵阳钢材市场7月17日价格行情</a></li>
+                <li><a href="#">贵阳钢材市场7月17日价格行情</a></li>
+                <li><a href="#">贵阳钢材市场7月17日价格行情</a></li>
+            </ul>
+        </div>
     </div>
     <!--E＝具体信息-->
+    <!--S＝儿童安全座椅-->
+    <div class="child">
+
+    </div>
+    <!--E＝儿童安全座椅-->
+    <!--S＝友情-->
+    <div class="link">
+        <p class="link_title">友情链接：百度&nbsp;新浪&nbsp;河南农业大学&nbsp;</p>
+        <p class="link_content">hnny09&nbsp;</p>
+    </div>
+    <!--E＝友情-->
 
 
 
