by C 1、商贸代码完成

--- a/index.html
+++ b/index.html
@@ -167,10 +167,18 @@
     <div class="link">
         <p class="link_title">友情链接：百度&nbsp;新浪&nbsp;河南农业大学&nbsp;</p>
         <p class="link_content">hnny09&nbsp;</p>
+
     </div>
     <!--E＝友情-->
 
+    <!--S=关于我们-->
+    <div class="aboutMe">
+        <p class="">关于小飞飞｜关于小永永｜关于顺顺｜关于壮哥</p>
+        <p class="">关于河南农业大学｜关于固始县石佛高中｜关于汪棚一中</p>
+        <p>本站网络实名：Screat、平淡</p>
+    </div>
 
+    <!--E=关于我们-->
 
 </body>
 </html>
